--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "dependencies": {
     "anymatch": "^3.1.3",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "body-parser": "^1.20.3",
     "chokidar": "^4.0.3",
     "cors": "^2.8.5",
     "express": "^4.21.2",
-    "mysql2": "^3.13.0",
+    "express-session": "^1.18.1",
+    "mysql2": "^3.14.0",
     "nodemon": "^3.1.9"
   }
 }
